--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5"
   },
